fix: fix the test case and address a todo